manifests/jwt-token/request-auth.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: "jwt-example"
  namespace: demo
spec:
  selector:
    matchLabels:
      app: books
  jwtRules:
  - issuer: "http://3.218.128.39:30323/realms/Istio"
    jwksUri: "http://3.218.128.39:30323/realms/Istio/protocol/openid-connect/certs"
