manifests/jwt-token/route-base-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: books
  namespace: demo
spec:
  hosts:
  - "*"
  gateways:
  - service-gateway
  http:
  - match:
    - uri:
        prefix: /headers
      headers:
        "@request.auth.claims.realm_access.roles":
          exact: super-admin
    route:
    - destination:
        port:
          number: 4000
        host: my-books
